[package]
name = "rust-algorithms"
version = "0.1.0"
authors = ["Sathish Vinayk <sathishvinayk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.107"
piston2d-graphics = "0.36"
rand = "0.7.3"